--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div id="dice">
-		<div class="box1"><span class="item1"></span></div>
+	<div class="dice">
+		<div class="box-first"><span class="item1"></span></div>
+		<div class="box-second"><span class="item1"></span></div>
+		<div class="box-third"><span class="item1"></span></div>
+		<div class="box-fourth"><span class="item1"></span></div>
+		<div class="box-fifth"><span class="item1"></span></div>
+		<div class="box-sixth"><span class="item1"></span></div>
+		<div class="box-seventh"><span class="item1"></span></div>
 	</div>
+
 </body>
 </html>
